--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <head>
     <meta charset="utf-8" />
     <title>
-      VJSP India Pvt Ltd.
+      VJSP System Pvt Ltd.
     </title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
